<resources>
    <string name="app_name">腰果公考</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="common_confirm">确认</string>
    <string name="common_text">无内容</string>
    <string name="netdata_error">数据异常</string>

    <string name="alert_n">取消</string>
    <string name="alert_p">确定</string>
    <string name="alert_mock_p">交卷</string>
    <string name="alert_mock_n">坚持</string>
    <string name="alert_title">提示</string>

    <!-- 首页 -->
    <string name="study_index">学习</string>
    <string name="wholepage_index">真题演练</string>
    <string name="course_center">课程中心</string>
    <string name="course">课程</string>
    <string name="opencourse">公开课</string>
    <string name="wrong_index">错题本</string>
    <string name="vip_index">VIP</string>
    <string name="interview_index">面试</string>
    <string name="record_index">记录</string>
    <string name="setting_index">设置</string>

    <!-- 首页 -->
    <string name="homepage_yugufen">预估分</string>
    <string name="homepage_gufen_value">0</string>
    <string name="homepage_paiming">排在前</string>
    <string name="homepage_paiming_value">0</string>
    <string name="homepage_percent">%</string>
    <string name="homepage_autotest">快速智能练习</string>
    <string name="homepage_special">知识点专项练习</string>
    <string name="homepage_special_value">暂无</string>
    <string name="homepage_today_exam">mini模考</string>
    <string name="homepage_today_exam_value">已有0人参加</string>


    <!-- 快讯 -->
    <string name="course_promote">快讯</string>

    <!-- 设置 -->
    <string name="setting_account">账号设置</string>
    <string name="setting_studentid">我的学号</string>
    <string name="setting_myexam">我的考试</string>
    <string name="setting_push">学习提醒</string>
    <string name="setting_notice">系统通知</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_qa">常见问题</string>
    <string name="setting_delete_cache">手动清理缓存</string>
    <string name="setting_version_code">版本号</string>

    <!-- 做题 -->
    <string name="measure_option_a">A</string>
    <string name="measure_option_b">B</string>
    <string name="measure_option_c">C</string>
    <string name="measure_option_d">D</string>

    <!-- 解析 -->
    <string name="measure_analysis_fb_imagetext">图/文有错</string>
    <string name="measure_analysis_fb_answerwrong">答案有错</string>
    <string name="measure_analysis_fb_analysiswrong">解析有错</string>
    <string name="measure_analysis_fb_betteranalysis">我有更好的解析</string>

    <!-- 答题卡 -->
    <string name="answer_sheet_handin">交卷</string>

    <!-- 练习报告页面 -->
    <string name="practice_report_ratio">做对/全部题目</string>
    <string name="practice_report_semicolon">/</string>
    <string name="practice_report_zero">0</string>
    <string name="practice_report_time">秒/题</string>
    <string name="practice_report_category">科目</string>
    <string name="practice_report_note_name">知识点</string>
    <string name="practice_report_name">练习类型</string>
    <string name="practice_report_note">知识点掌握的越好盆栽长得越好哦</string>
    <string name="practice_report_borderline">往年分数线</string>
    <string name="practice_report_notedesp">你的知识点掌握度没发生变化呦，\n要继续加油呀</string>
    <string name="practice_report_all">全部解析</string>
    <string name="practice_report_error">错题解析</string>
    <string name="practice_report_minimokaorank">本次战绩</string>
    <string name="practice_report_evaluate">你的成绩</string>
    <string name="practice_report_totalpoints">总分</string>
    <string name="practice_report_xingce">行测</string>
    <string name="practice_report_shenlun">申论</string>
    <string name="practice_report_entire_rank">在全站排名前</string>
    <string name="practice_report_entire_score">全站平均分数</string>
    <string name="practice_report_borderline_desc">
        根据实际情况，各省分数线包括行测分、申论分、总分（可能只有其中一项或两项），
        此处“总分”是指行测与申论分数之和。
    </string>

    <!--模考总动员  -->
    <string name="mockpre_exam_join">课程报名</string>
    <string name="mockpre_join_exam">进入考试</string>
    <string name="mockpre_order_exam">预约考试</string>

    <!-- 整卷练习 -->
    <string name="wholepage_province">省份</string>
    <string name="wholepage_year">年份</string>
    <string name="wholepage_relocation">重新定位</string>

    <!-- 课程中心 -->
    <string name="course_filter_all">全部</string>
    <string name="course_filter_tag">科目</string>
    <string name="course_filter_purchase">已/未购</string>
    <string name="course_filter_area">地区</string>
    <string name="course_null">没有合适的课程？\n联系在线客服，获取更多信息</string>
    <string name="course_qq">咨询客服</string>
    <string name="neterror">连接不到网络</string>
    <string name="course_offline">点击右上角可以查看已下载课程</string>
    <!-- 知识点层级 -->
    <string name="hierarchy_name">知识点层级</string>

    <!-- Alert -->
    <string name="alert_pause_btn">继续</string>
    <string name="alert_savetest_title">提示</string>
    <string name="alert_savetest_msg">确定要退出练习？退出后未完成的练习会保存在练习历史中</string>
    <string name="alert_mock_back">要放弃考试了吗？</string>
    <string name="alert_lastpage_another">再来一发</string>
    <string name="alert_lastpage_back">返回</string>
    <string name="alert_lastpage_zhibo">看个直播</string>
    <string name="alert_delete_error_content">确定要从错题本中删除这道错题么？</string>
    <string name="alert_answersheet_content">你还有题没做，确认要交卷吗？</string>
    <string name="alert_answersheet_n">再看看</string>
    <string name="alert_answersheet_p">交卷</string>
    <string name="alert_opencourse_p">好的</string>
    <string name="alert_report_error_content">确认是这类错误吗？</string>
    <string name="alert_report_error_p">提交</string>
    <string name="alert_grade">卖个萌，求好评</string>
    <string name="alert_grade_grade">给好评</string>
    <string name="alert_grade_feedback">吐个槽~</string>

    <!-- 评价模块 -->
    <string name="grade_success">谢谢支持\n课程已开通</string>
    <string name="grade_learn">去学习</string>
    <string name="grade_fail">咦，没有收到评论挨？</string>
    <string name="grade_regrade">重新评价</string>
    <string name="grade_abandon">送课也不要</string>
    <string name="grade_everydayshare_alert_msg">这么辛苦，晒个成绩吧</string>
    <string name="grade_everydayshare_alert_p">去分享</string>
    <string name="grade_everydayshare_alert_n">不要</string>
    <string name="refused_course">不要课了</string>
    <string name="go_login">登录获取</string>

    <!-- 能力评估 -->
    <string name="evaluation_score">预测分</string>
    <string name="evaluation_rank">排在前</string>
    <string name="evaluation_learningdays">学习天数</string>
    <string name="evaluation_totaltime">模考时长</string>
    <string name="evaluation_totalquestions">答题量</string>
    <string name="evaluation_accuracy">正确率</string>
    <string name="evaluation_day">天</string>
    <string name="evaluation_min">分钟</string>
    <string name="evaluation_dao">道</string>
    <string name="evaluation_average">全站平均</string>
    <string name="evaluation_history">历史预测分</string>

    <!-- 练习说明 -->
    <string name="practicedesc_start">开始练习</string>
    <string name="practicedesc_hide">以后不再显示</string>

    <!-- 其他解析 -->
    <string name="myanalysis_hint">最少输入三个字……</string>

    <!-- 试卷类型 -->
    <string name="paper_type_auto">快速智能练习</string>

    <!-- Activity -->
    <string name="title_activity_exam_change">考试项目</string>
    <string name="title_activity_system_notice">系统通知</string>
    <string name="title_activity_qa">常见问题</string>
    <string name="title_activity_measure">题目</string>
    <string name="title_activity_answer_sheet">答题卡</string>
    <string name="title_activity_scratch_paper"> </string>
    <string name="title_activity_practice_report">练习报告</string>
    <string name="title_activity_measure_analysis">解析</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_history_mokao">历史模考</string>
    <string name="title_activity_evaluation">能力评估</string>
    <string name="title_activity_practice_description">练习说明</string>
    <string name="title_activity_special_project">专项练习</string>
    <string name="title_activity_notice_detail">通知</string>
    <string name="title_activity_my_analysis">我有更好的解析</string>
    <string name="title_activity_open_course_unstart">即将开始</string>
    <string name="title_activity_open_course_none">查看往期</string>
    <string name="title_activity_web_view"> </string>
    <string name="title_activity_app_guide">AppGuideActivity</string>
    <string name="title_activity_gufen_list">估分进行时</string>
    <string name="title_activity_mock_pre">模考总动员</string>
    <string name="title_activity_mock_list">模考总动员</string>

    <!--面试 -->
    <string name="title_activity_interview_guokao">国考精选</string>
    <string name="title_activity_interview_category">分类突破</string>
    <string name="title_activity_interview_paper_detail">题目列表</string>
    <string name="title_activity_interview_material_detail">材料</string>


    <!-- 支付模块 -->
    <string name="wx_pay">微信支付结果</string>
    <string name="wx_pay_error">支付错误</string>
    <string name="wx_pay_cancel">取消支付</string>

    <!--版本更新-->
    <string name="new_version">新版本</string>
    <string name="update_now">这就更新</string>
    <string name="nexttime">下次再说</string>
    <string name="hehe">新版本</string>
    <string name="evaluation_update_text">更详细的等级评估</string>
    <string name="practice_update_text">可以跟小伙伴比较啦</string>

    <!--分享-->
    <string name="share_title">腰果公考</string>
    <string name="share_wb_content">戳右看看：</string>
    <string name="share_wb_tag">#公考要过，就用腰果#</string>
    <string name="share_wb_topic">#天天模考#</string>
    <string name="share_wb_android">安卓</string>
    <string name="share_wb_ios">(分享自@腰果公考)ios：</string>

    <!--vip -->
    <string name="vip_index_evaluation">我的能力评估</string>
    <string name="vip_index_course">我的课程</string>
    <string name="vip_index_homework">我的作业</string>
    <string name="vip_index_message">我的消息</string>

    <!--面试 -->
    <string name="interview_index_guokao">国考精选</string>
    <string name="interview_index_star_analysis">名师解析</string>
    <string name="interview_index_category">分类突破</string>
    <string name="interview_index_history">历年真题</string>
    <string name="title_activity_record_collect">RecordCollectActivity</string>
    <string name="interview_teacher_comment_count">剩余名师点评次数</string>
    <string name="title_activity_buy_teacher_comment">购买名师点评</string>
    <string name="title_activity_order_status">订单详情</string>
    <string name="title_activity_teacher_comment_list">名师点评</string>

    <string name="homepage_btn_title_mock">模考</string>
    <string name="homepage_btn_title_gufen">估分</string>
    <string name="homepage_mini_history">mini历史</string>
    <string name="homepage_note">知识点</string>
    <string name="homepage_zhenti">真题演练</string>
</resources>
