<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/container_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tab_radiogroup"
        android:layout_below="@+id/toolbar"></RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_above="@+id/tab_radiogroup"
        android:background="@color/common_line"></View>

    <RadioGroup
        android:id="@+id/tab_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/study"
            style="@style/TabRadioButton"
            android:drawableTop="@drawable/tab_study_selector"
            android:text="@string/study_index" />

        <RadioButton
            android:id="@+id/course"
            style="@style/TabRadioButton"
            android:drawableTop="@drawable/tab_course_selector"
            android:text="@string/course" />

        <RadioButton
            android:id="@+id/opencourse"
            style="@style/TabRadioButton"
            android:drawableTop="@drawable/tab_opencourse_selector"
            android:text="@string/opencourse" />

        <RadioButton
            android:id="@+id/record"
            style="@style/TabRadioButton"
            android:drawableTop="@drawable/tab_record_selector"
            android:text="@string/record_index" />

        <RadioButton
            android:id="@+id/vip"
            style="@style/TabRadioButton"
            android:drawableTop="@drawable/tab_vip"
            android:text="@string/vip_index" />
    </RadioGroup>

</RelativeLayout>
