<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical"
    tools:context="com.appublisher.quizbank.activity.PracticeReportActivity">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- 练习类型及内容信息 -->
            <TextView
                android:id="@+id/practice_report_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textColor="@color/setting_text"
                android:text="@string/practice_report_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textSize="12sp"
                android:textColor="@color/practice_report_ratio"
                android:text="@string/practice_report_ratio"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <!-- 做对的题目 -->
                <TextView
                    android:id="@+id/practice_report_rightnum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    android:textColor="@color/setting_text"
                    android:text="@string/practice_report_zero"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/setting_text"
                    android:text="@string/practice_report_semicolon"/>

                <!-- 全部的题目 -->
                <TextView
                    android:id="@+id/practice_report_totalnum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/setting_text"
                    android:text="@string/practice_report_zero"/>
            </LinearLayout>

            <!-- 科目 -->
            <LinearLayout
                android:id="@+id/practice_report_category_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

            </LinearLayout>

            <!-- 知识点 -->
            <LinearLayout
                android:id="@+id/practice_report_note_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/setting_text"
                    android:layout_marginLeft="36dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/practice_report_note"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/practice_report_notenochange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/practice_report_logo"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/practice_report_notedesp"
                    android:text="@string/practice_report_notedesp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
